--- a/package.json
+++ b/package.json
@@ -29,9 +29,25 @@
     "react-intl": "^7.0.0 || ^8.0.0"
   },
   "devDependencies": {
+    "@maykinmedia/eslint-config": "^2.0.0",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.2",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-storybook": "^10.1.11",
+    "prettier": "^3.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^7.0.0"
+    "react-intl": "^7.0.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.52.0",
+    "vite": "^7.3.1",
+    "vitest": "^4.0.16"
   },
   "dependencies": {}
 }
