--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "./package.json": "./package.json"
   },
   "types": "./dist/index.d.ts",
-  "scripts": {},
+  "scripts": {
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
   "files": [
     "dist/",
     "i18n"
@@ -30,7 +33,16 @@
   },
   "devDependencies": {
     "@maykinmedia/eslint-config": "^2.0.0",
+    "@storybook/addon-docs": "^10.1.11",
+    "@storybook/addon-vitest": "^10.1.11",
+    "@storybook/react-vite": "^10.1.11",
     "@trivago/prettier-plugin-sort-imports": "^6.0.2",
+    "@types/node": "^25.0.3",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
@@ -38,15 +50,23 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-hooks": "^6.1.1",
     "eslint-plugin-storybook": "^10.1.11",
+    "msw": "^2.12.7",
+    "playwright": "^1.57.0",
     "prettier": "^3.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^7.0.0",
+    "storybook": "^10.1.11",
+    "storybook-react-intl": "^10.0.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.52.0",
     "vite": "^7.3.1",
+    "vite-plugin-circular-dependency": "^0.5.0",
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-eslint2": "^5.0.4",
+    "vite-tsconfig-paths": "^6.0.3",
     "vitest": "^4.0.16"
   },
   "dependencies": {}
