--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
   },
   "types": "./dist/index.d.ts",
   "scripts": {
+    "build": "vite build",
+    "build:typecheck": "tsc --noEmit",
+    "test": "TZ=Europe/Amsterdam npm-run-all test:*",
+    "test:storybook": "TZ=Europe/Amsterdam vitest --run --project=storybook",
+    "test:vitest": "TZ=Europe/Amsterdam vitest --run --project=unit",
+    "format": "prettier --write 'src/**/*' '.storybook/**/*'",
+    "checkformat": "prettier --check 'src/**/*' '.storybook/**/*'",
+    "start": "npm run storybook",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "makemessages": "formatjs extract",
+    "compilemessages": "formatjs compile-folder --ast i18n/messages i18n/compiled",
+    "lint": "eslint src"
   },
   "files": [
     "dist/",
@@ -32,6 +43,7 @@
     "react-intl": "^7.0.0 || ^8.0.0"
   },
   "devDependencies": {
+    "@formatjs/cli": "^6.10.0",
     "@maykinmedia/eslint-config": "^2.0.0",
     "@storybook/addon-docs": "^10.1.11",
     "@storybook/addon-vitest": "^10.1.11",
@@ -43,6 +55,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "@vitest/browser-playwright": "^4.0.16",
     "@vitest/coverage-v8": "^4.0.16",
+    "babel-plugin-formatjs": "^11.1.1",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
@@ -53,6 +66,7 @@
     "eslint-plugin-react-hooks": "^6.1.1",
     "eslint-plugin-storybook": "^10.1.11",
     "msw": "^2.12.7",
+    "npm-run-all": "^4.1.5",
     "playwright": "^1.57.0",
     "prettier": "^3.7.4",
     "react": "^18.2.0",
@@ -67,7 +81,8 @@
     "vite-plugin-dts": "^4.5.4",
     "vite-plugin-eslint2": "^5.0.4",
     "vite-tsconfig-paths": "^6.0.3",
-    "vitest": "^4.0.16"
+    "vitest": "^4.0.16",
+    "vitest-browser-react": "^2.0.2"
   },
   "dependencies": {}
 }
