--- a/package.json
+++ b/package.json
@@ -84,5 +84,9 @@
     "vitest": "^4.0.16",
     "vitest-browser-react": "^2.0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@maykin-ui/admin-ui": "^2.0.0-beta.2",
+    "@tanstack/react-query": "^5.90.16",
+    "react-router": "^7.12.0"
+  }
 }
