--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-dom": "^18.2.0",
     "react-intl": "^7.0.0",
     "storybook": "^10.1.11",
+    "storybook-addon-remix-react-router": "^6.0.0",
     "storybook-react-intl": "^10.0.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.52.0",
