:building_construction: [#8] Add structure for generic storybook decorators

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "resolveJsonModule": true,
     "noErrorTruncation": true,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/sb-decorators": ["../.storybook/decorators.tsx"]
     },
     "skipLibCheck": true
   },
