--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^7.0.0",
+    "sass-embedded": "^1.97.3",
     "storybook": "^10.1.11",
     "storybook-addon-remix-react-router": "^6.0.0",
     "storybook-react-intl": "^10.0.1",
