:sparkles: [#2] Add session expiry handling and state-pool dependency
Defining a generic `apiCall` function, which is a simple window.fetch call which also performs an `onResponseHook`. The `onResponseHook` handles session updates.

The session handling is based on the session handling setup of the current OF backend js session handling. Using state-pool, an global session state is created.

The `onResponseHook` is performed on every api call, and updates the global session state.

The global session state is picked up by the `SessionStatus` component. This is a very simplistic component that checks the validity of the session (is the session not expired, and is user authenticated). If the session is invalid, and error is thrown.

--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
   "dependencies": {
     "@maykin-ui/admin-ui": "^2.0.0-beta.2",
     "@tanstack/react-query": "^5.90.16",
-    "react-router": "^7.12.0"
+    "react-router": "^7.12.0",
+    "state-pool": "^0.10.2"
   },
   "msw": {
     "workerDirectory": [
