--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "vitest-browser-react": "^2.0.2"
   },
   "dependencies": {
-    "@maykin-ui/admin-ui": "^2.0.0-beta.2",
+    "@maykin-ui/admin-ui": "^3.0.0-alpha.1",
     "@tanstack/react-query": "^5.90.16",
     "react-router": "^7.12.0"
   }
