--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-react-hooks": "^6.1.1",
     "eslint-plugin-storybook": "^10.1.11",
     "msw": "^2.12.7",
+    "msw-storybook-addon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "playwright": "^1.57.0",
     "prettier": "^3.7.4",
