:wrench: [#22] MSW storybook setup

--- a/package.json
+++ b/package.json
@@ -91,5 +91,10 @@
     "@maykin-ui/admin-ui": "^2.0.0-beta.2",
     "@tanstack/react-query": "^5.90.16",
     "react-router": "^7.12.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
