--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
   "dependencies": {
     "@maykin-ui/admin-ui": "^3.0.0-alpha.1",
     "@tanstack/react-query": "^5.90.16",
+    "formik": "^2.4.9",
     "react-router": "^7.12.0"
   },
   "msw": {
