--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@storybook/addon-vitest": "^10.1.11",
     "@storybook/react-vite": "^10.1.11",
     "@trivago/prettier-plugin-sort-imports": "^6.0.2",
+    "@types/lodash": "^4.17.23",
     "@types/node": "^25.0.3",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
